3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

MSW 2000/12/23:
server/attack.c:  Don't exit hit_player function if damage is reduced to 0
    in magical attacks.  This was preventing face of death and probably a lot
    of effect only spells from working.
server/spell_util.c: modify check_cone_push to use move_object to blow
    the objects.  Before, multisquare monsters were getting sliced
    into their individual components - move_object deals with multisquare objects
    properly.

PeterM 2000/12/18:  Re-add the conflict spell (various files)
attack.c:  fix a bug which could easily have led to seg fault,
          and did when I was testing under efence.

MSW 2000/12/17: Various changes.  Note that the scope of files in this checkin
make it appear that a lot was changed, but in fact it was mostly just
re-orginization - very little code has actually changed.
include/autoconf.h.in: Add HAVE_LIBDES to file.
include/config.h: Remove comments after defines for MAP_MIN/MAX timeouts.
	This just removes some warnings during compile.  comments are now
	on lines by themselves.
include/player.h: remove shootstrength for player structure.  It was unused.
server/Makefile.in: remove input.c file, add c_range.c file.
server/c_chat.c: remove command_last, add command_shout and command_tell
	from input.c to this file.  Also fix bug in command tell which
	would let players crash server at will.
server/c_misc.c,server/c_object.c: Relocate many functions
	 from input.c into these files.
server/c_move.c, server/c_new.c: Add standard crossfire banner comment.
server/c_range.c: New file - contains range related commands, 
	including spell casting (relocated from input.c)