@@ -254,6 +254,15 @@ error - Your ANSI C compiler should be defining __STDC__;
 
 #define MAX_NAME 16
 #define BIG_NAME 32
+
+/* Instead of using arbitrary constants for indexing the
+ * freearr, add these values.  <= SIZEOFFREE1 will get you
+ * within 1 space.  <= SIZEOFFREE2 wll get you withing 
+ * 2 spaces, and the entire array (<= SIZEOFFREE) is 
+ * three spaces
+ */
+#define SIZEOFFREE1 8
+#define SIZEOFFREE2 24
 #define SIZEOFFREE 49
 
 #define PATH_NULL	0x00000000      /* 0 */
